Updated the title page to extract content from photo rights. updated bugs on the README.md

--- a/templates/body02.xhtml
+++ b/templates/body02.xhtml
@@ -1,4 +1,7 @@
 	<p class="figure img"><img class="hallogo" src="./image/hallogo.png" alt="hallogo.png" /></p>
+
+	<p class="copyright">{photo_rights}</p>
+
 	<p class="copyright">For all works contained herein:</p>
 	<p class="copyright">Unauthorized copying, arranging, adapting, recording, Internet posting, public performance,</p>
 	<p class="copyright">or other distribution of music in this publication is an infringement of copyright.</p>
